<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.codepampa.alarmes.controller.MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/services_title"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/button_lancar_activity_service_um"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_lancar_um"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/button_lancar_activity_service_dois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_lancar_dois"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/button_lancar_activity_service_tres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_lancar_tres"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>


</LinearLayout>
