<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".controller.AlarmeTresController"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_agendar_um_min"
        android:id="@+id/activity_tres_text_view_title"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        android:layout_marginTop="30dp"
        android:layout_gravity="clip_horizontal"
        android:id="@+id/activity_tres_button_start"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_stop"
        android:layout_marginTop="30dp"
        android:layout_gravity="clip_horizontal"
        android:id="@+id/activity_tres_button_stop"/>


</LinearLayout>
